--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         </activity>
 
         <activity
+            android:name=".ui.TextureViewCameraActivity"
+            android:theme="@style/FullscreenTheme" />
+        <activity
             android:name=".ui.TakePhotoActivity"
             android:theme="@style/FullscreenTheme" />
         <activity
