--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name=".ui.activity.ImageShowActivity"
             android:theme="@style/FullscreenTheme" />
+        <activity android:name=".ui.activity.ImageListActivity" />
     </application>
 
 </manifest>
