--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:name=".ui.activity.ImageShowActivity"
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".ui.activity.ImageListActivity" />
+        <activity android:name=".ui.activity.VideoListActivity" />
     </application>
 
 </manifest>
