feat：增加视频和图片预览功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity
             android:name=".ui.activity.ImageShowActivity"
             android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".ui.activity.VideoShowActivity"
+            android:theme="@style/FullscreenTheme" />
         <activity android:name=".ui.activity.ImageListActivity" />
         <activity android:name=".ui.activity.VideoListActivity" />
     </application>
