feat：新增转场特效功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".ui.activity.ImageListActivity" />
         <activity android:name=".ui.activity.VideoListActivity" />
+
+        <activity
+            android:name=".ui.activity.ImageTransitionActivity"
+            android:theme="@style/FullscreenTheme" />
     </application>
 
 </manifest>
