feat：搭建优化后的转场框架

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".ui.activity.ImageTransitionActivity"
             android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".ui.activity.ImageTransition2Activity"
+            android:theme="@style/FullscreenTheme" />
     </application>
 
 </manifest>
