feat：新增PCM录制和播放功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity
             android:name=".ui.activity.ImageTransition2Activity"
             android:theme="@style/FullscreenTheme" />
+
+        <activity android:name=".ui.activity.PcmActivity" />
     </application>
 
 </manifest>
