feat：增加YUV录制功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:theme="@style/FullscreenTheme" />
 
         <activity android:name=".ui.activity.PcmActivity" />
+        <activity android:name=".ui.activity.YuvActivity" />
     </application>
 
 </manifest>
