feat：增加视频硬解码播放功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
 
         <activity android:name=".ui.activity.PcmActivity" />
         <activity android:name=".ui.activity.YuvActivity" />
+
+        <activity
+            android:name=".ui.activity.VideoPlayActivity"
+            android:theme="@style/FullscreenTheme" />
     </application>
 
 </manifest>
